--- a/tests/static/tox.ini
+++ b/tests/static/tox.ini
@@ -3,7 +3,8 @@ minversion=2.3.1
 envlist =
     #py{27,35}-{flake8,pylint,unit}
     #py27-{yamllint,ansible_syntax,generate_validation}
-    py38-ansible_syntax
+    py39-ansible_syntax
+    py39-ansible_syntax
 skipsdist=True
 skip_missing_interpreters=True
 
@@ -11,7 +12,7 @@ skip_missing_interpreters=True
 skip_install=True
 setenv = TOX_ANSIBLE_INV_PATH = {toxinidir}/tox-inventory.txt
 deps =
-    -r{toxinidir}/requirements.txt
+    #-r{toxinidir}/requirements.txt
     -r{toxinidir}/test-requirements.txt
     #py35-flake8: flake8-bugbear==17.3.0
 
